style.css
/* ||GENERAL STYLES */
*,
*::before,
*::after {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

html,
body {
	max-width: 100vw;
	min-height: 100svh;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
}

body {
	align-items: center;
	background: #171835;
	background:
		linear-gradient(157deg, #171835 10%, #561787 50%, #171835 90%) no-repeat
		center / cover;
	display: flex;
	font-family: "Noto Sans Cham", sans-serif;
	justify-content: center;
}

button,
img {
	-webkit-tap-highlight-color: transparent;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

img {
	display: block;
}

/* ||MAIN STYLES */
.wrapper {
	align-items: center;
	display: flex;
	flex-direction: column;
	text-align: center;
	width: 95%;
}

.title {
	color: #ffffff;
}

/* **SCORE BOARD */
.score-board {
	align-items: center;
	color: #bbbbbb;
	display: flex;
	justify-content: space-between;
	margin-block: 2rem;
	max-width: 500px;
	width: 80%;
}

.player__character {
	font-size: 1rem;
	font-weight: 400;
	margin-bottom: 1rem;
}

.dash {
	font-size: 1.25rem;
	font-weight: 600;
}

.player__score {
	color: #ffffff;
	font-size: 3rem;
	font-weight: 600;
	transition: all ease-in-out 1000ms;
}

/* **BUTTONS */
.buttons {
	display: flex;
	flex-wrap: wrap;
	gap: 1rem;
	justify-content: center;
	margin-bottom: 1.75rem;
}

.btn {
	background-color: #64308e;
	border: 1px solid #7d4ba2;
	border-radius: 10px;
	cursor: pointer;
	padding: 1.25rem 1.75rem;
	transition: all linear 225ms;
}

.btn:focus-visible {
	outline: 2px dashed whitesmoke;
	outline-offset: 3px;
}

@media (hover: hover) {
	.btn--hover:hover {
		background-color: #744799;
		scale: 1.15;
	}
}

.btn--active:active {
	background-color: #744799;
	scale: 0.9;
}

/* **STAGE */
.stage {
	margin-bottom: 2.5rem;
	opacity: 0;
	position: relative;
	transform: translateY(25px);
	transition: all ease-in-out 500ms;
}

.battle {
	align-items: center;
	color: #bbbbbb;
	display: flex;
	gap: 2rem;
	transition: all ease-out 400ms;
}

.battle__choice {
	align-items: center;
	display: flex;
	flex-direction: column;
}

.choices {
	height: 50px;
	width: 50px;
}

.result {
	align-items: center;
	color: #80ff72;
	display: flex;
	flex-direction: column;
	font-size: 1.25rem;
	font-weight: 600;
	inset: 0;
	opacity: 0;
	place-self: center;
	position: absolute;
	scale: 0.5;
	transition: all ease-in-out 900ms;
}

.result::before {
	background: url("img/party-popper.png") no-repeat center / cover;
	content: "";
	display: grid;
	height: 2.5rem;
	width: 2.5rem;
}

/* **RESET BUTTON */
.reset {
	color: #ffffff;
	font-weight: 600;
	padding: 1rem 3.5rem;
}

/* ||EFFECTS */

.choices-bigSmall {
	animation: bigSmall ease 500ms;
}

@keyframes bigSmall {
	0% {
		scale: 1;
	}

	50% {
		scale: 2;
	}

	100% {
		scale: 1;
	}
}

.stage-fadeIn {
	opacity: 1;
	transform: translateY(0);
}

.battle-initial {
	-webkit-animation: goUpDown ease 600ms both;
	animation: goUpDown ease 600ms both;
}

@-webkit-keyframes goUpDown {
	0% {
		transform: translateY(0);
	}

	50% {
		transform: translateY(-25px);
	}

	100% {
		transform: translateY(200px);
	}
}

@keyframes goUpDown {
	0% {
		transform: translateY(0);
	}

	50% {
		opacity: 0;
		transform: translateY(-25px);
	}

	100% {
		opacity: 0;
		transform: translateY(200px);
	}
}

.battle-initial-one {
	-webkit-animation: goDownUp ease 600ms both;
	animation: goDownUp ease 600ms both;
}

@-webkit-keyframes goDownUp {
	0% {
		opacity: 0;
		transform: translateY(200px);
	}

	50% {
		opacity: 0;
	}

	100% {
		opacity: 1;
		transform: translateY(0);
	}
}

@keyframes goDownUp {
	0% {
		opacity: 0;
		transform: translateY(200px);
	}

	50% {
		opacity: 0;
	}

	100% {
		opacity: 1;
		transform: translateY(0);
	}
}
.battle-fadeOut {
	-webkit-animation: goUpDown ease 500ms both;
	animation: goUpDown ease 500ms both;
}

.result-fadeIn {
	opacity: 1;
	scale: 1;
	transition: all ease-in-out 900ms;
}

.result-fadeOut {
	opacity: 0;
	scale: 0.5;
	transition: all ease-in-out 900ms;
}

.disabled {
	opacity: 0.7;
}

.number-effect {
	-webkit-animation: score ease-in-out 600ms;
	animation: score ease-in-out 600ms;
}

@-webkit-keyframes score {
	0% {
		transform: scale(1);
	}

	50% {
		transform: scale(2);
	}

	100% {
		transform: scale(1);
	}
}

@keyframes score {
	0% {
		transform: scale(1);
	}

	50% {
		transform: scale(2);
	}

	100% {
		transform: scale(1);
	}
}

@media (pointer: coarse) and (orientation: landscape) {
	.wrapper {
		margin: 1rem 0;
	}
}

